--- a/third.html
+++ b/third.html
@@ -23,7 +23,7 @@
 
 <!-- Map data are from https://github.com/topojson/us-atlas -->
 <script type="text/javascript">
-	draw_page("Manasa");
+	draw_page("third");
 </script>
 
 
