--- a/second.html
+++ b/second.html
@@ -3,40 +3,39 @@
 <meta charset="UTF-8">
 
 <head>
-<link rel="stylesheet" type="text/css" href="ws_style.css">
-<title> United States COVID-19 trends </title>
-
-<script src="scripts.js"></script>
+	<link rel="stylesheet" type="text/css" href="ws_style.css">
+	<title> United States COVID-19 trends </title>
+	<script src="scripts.js"></script>
+	<!-- D3 for graphs -->
+	<script src="https://d3js.org/d3.v5.min.js""></script>
+	<!-- Topojson for geographical maps -->
+	<script src="https://d3js.org/topojson.v1.min.js"></script>
 </head>
 
 <body>
-<div class = "page_header">
-<h1 id = "heading"> Tracking COVID-19 in United States </h1>
-<a class="previous" href="index.html" style="float:left">&laquo; Prev: Overview </a>
-<a class="next" href="third.html" style="float:right">Next: States &raquo; </a>
-</div>
 
-<svg width="960" height="500"></svg>
-<!-- D3 for graphs -->
-<script src="https://d3js.org/d3.v5.min.js""></script>
-<!-- Topojson for geographical maps -->
-<script src="https://d3js.org/topojson.v1.min.js"></script>
+	<div class = "page_header">
+		<h1 id = "heading"> Tracking COVID-19 in United States </h1>
+		<a class="previous" href="index.html" style="float:left">&laquo; Prev: Overview </a>
+		<a class="next" href="third.html" style="float:right">Next: States &raquo; </a>
+	</div>
 
-<!-- Map data are from https://github.com/topojson/us-atlas -->
-<script type="text/javascript">
-	draw_page("second");
-</script>
-
-
-
+	<div id="second_chart">
+		<h3 color:white >Select from dropdown to view State Trends</h3>
+		<div class="slide2_dd" id="slide2_dd"></div>
+		<svg class="chart" width="1024" height ="800"></svg>
+		<script type="text/javascript">
+			draw_page("second");
+		</script>
+	</div>	
 </body>
 
 <footer>
-<div class = "page_footer">
-<b>Data Source : </b> <a href="https://data.world/associatedpress/johns-hopkins-coronavirus-case-tracker" style="color:white">Johns Hopkins COVID-19 Case Tracker</a>
-<br>
-<b>Visualization Author : </b> Sudhir Ponnachana
-</div>
+	<div class = "page_footer">
+		<b>Data Source : </b> <a href="https://data.world/associatedpress/johns-hopkins-coronavirus-case-tracker" style="color:white">Johns Hopkins COVID-19 Case Tracker</a>
+		<br>
+		<b>Visualization Author : </b> Sudhir Ponnachana
+	</div>
 </footer>
 
 </html>
