--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 	<div class = "page_header">
 		<h1 id = "heading"> Tracking COVID-19 in United States </h1>
-		<a class="next" href="second.html" style="float:right">Next: States &raquo; </a>
+		<a class="next" href="bar_chart_of_all_states.html" style="float:right">Next: Overview &raquo; </a>
 	</div>
 	
 	<div class="desc">
