--- a/bar_chart_of_all_states.html
+++ b/bar_chart_of_all_states.html
@@ -17,9 +17,14 @@
 	<div class = "page_header">
 		<h1 id = "heading"> Tracking COVID-19 in United States </h1>
 		<a class="previous" href="index.html" style="float:left">&laquo; Prev: Overview </a>
-		<a class="next" href="per_state_trend.html" style="float:right">Next: States &raquo; </a>		
+		<a class="next" href="per_state_trend.html" style="float:right">Next: Statewise Trends &raquo; </a>		
 	</div>
 
+	<div class="desc">
+		<p text-align=left>
+			The bar graph below shows the spread of COVID-19 across the states in United States. The wide spread nature of the pandemic in certain states is apparent through the bar chart. You can see the details of the confirmed cases and deaths by hovering over the bars for each state.
+		</p>
+	</div>
 	<div id="mybargraph">
 		<div class="bgtooltip" id="bgtooltip"></div>
 		<svg id="bargrapharea" width="1024" height="800"></svg>
