--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
 <body>
 	<div class = "page_header">
 		<h1 id = "heading"> Tracking COVID-19 in United States </h1>
-		<a class="next" href="bar_chart_of_all_states.html" style="float:right">Next: Overview &raquo; </a>
+		<a class="next" href="bar_chart_of_all_states.html" style="float:right">Next: States &raquo; </a>
 	</div>
 	
 	<div class="desc">
 		<p text-align=left>
-			COVID-19 a.k.a SARS-CoV-2 has impacted how people live and go about their daily lives for ever. World Health Organization(WHO) formally notified about rise cases of pneumonia in Wuhan City on 31, Dec 2019. In US, first case of COVID-19 was diagnosed and reported in the state of Washington on 23rd Jan, 2020. The spread of virus that causes COVID-19 is primaryly airborne according to the scientific community. Since then State Governments in US have taken
-			varying measures to stop the spread pandemic. State governments have imposed stay-at-home directives at times and have relaxed it as well. Texas, Florida, Arizona, Illinois and California have seen a rise in COVID-19 cases. This interative slideshow provides an overview of the confirmed COVID-19 cases and deaths due to COVID-19 since the time it was first reported.
+			COVID-19 a.k.a SARS-CoV-2 has impacted how people live and go about their daily lives for ever. World Health Organization(WHO) formally notified about rise cases of pneumonia in Wuhan City on 31, Dec 2019. In US, first case of COVID-19 was diagnosed and reported in the state of Washington on 23rd Jan, 2020. The spread of virus that causes COVID-19 is primaryly airborne according to the scientific community. Since then, the State Governments in US have taken
+			varying measures to stop the spread pandemic. State governments have imposed stay-at-home directives at times and have relaxed it as well. Texas, Florida, Arizona, Illinois and California have seen a rise in COVID-19 cases. 
+			This interative slideshow provides an overview of the confirmed COVID-19 cases and deaths due to COVID-19, in United States, since the time it was first reported.
 		</p>
 	</div>
 	<div id="annotate"></div>
