--- a/per_state_trend.html
+++ b/per_state_trend.html
@@ -16,7 +16,17 @@
 
 	<div class = "page_header">
 		<h1 id = "heading"> Tracking COVID-19 in United States </h1>
-		<a class="previous" href="bar_chart_of_all_states.html" style="float:left">&laquo; Prev: Overview </a>
+		<a class="previous" href="bar_chart_of_all_states.html" style="float:left">&laquo; Prev: States </a>
+		<a class="previous" href="index.html" style="float:center">&laquo; Home &raquo; </a>
+	</div>
+
+	<div class="desc">
+		<p text-align=left>
+			The spread of COVID-19 across the various states in United States has vast differences. Spread of the pandemic has varied in each state. It appeared that certain states like Florida, Arizona and Texas had weathered the spread of COVID-19 but suddenly we are seeing a 
+			spike in cases. Without the trend lines for each state, it is hard to figure out the states where the spread is plateauing versus the states like New York which peaked and seem to be plateauing now. These graphs certainly helps individuals to make travel and social distancing decisions
+			to be responsible citizens.
+			
+		</p>
 	</div>
 
 	<div id="mychart">
